--- a/static/styles.css
+++ b/static/styles.css
@@ -40,9 +40,11 @@ input[type="submit"] {
     color: white;
     border: none;
     padding: 10px 20px;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
+    margin: 10px;
+
 }
 
 input[type="submit"]:hover {
@@ -56,4 +58,15 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+button{
+    background-color: #ac4caf;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 10px;
 }
